# social

./: README.md
mail_attach_existing_attachment/i18n/: it.po
mail_composer_cc_bcc/: README.rst  __manifest__.py
mail_composer_cc_bcc/models/: mail_mail.py
mail_composer_cc_bcc/tests/: test_mail_cc_bcc.py
mail_gateway/: README.rst  __manifest__.py
mail_gateway/i18n/: es.po  it.po  mail_gateway.pot
mail_gateway/models/: res_partner.py
mail_gateway/wizards/: mail_compose_gateway_message.py  mail_compose_gateway_message.xml
mail_gateway_telegram/i18n/: es.po
mail_gateway_whatsapp/i18n/: es.po
mail_notification_with_history/: README.rst
mail_notification_with_history/data/: mail_data.xml
mail_notification_with_history/i18n/: es.po  it.po  mail_notification_with_history.pot
mail_optional_autofollow/i18n/: ca.po  de.po  es.po  es_CO.po  fr.po  hr.po  it.po  mail_optional_autofollow.pot  pt_BR.po  sl.po
mail_optional_follower_notification/i18n/: am.po  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_CO.po  es_CR.po  es_EC.po  es_MX.po  es_VE.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_CH.po  gl.po  hr.po  hr_HR.po  hu.po  it.po  ja.po  lt.po  lv.po  mail_optional_follower_notification.pot  mk.po  mn.po  nb.po  nb_NO.po  nl.po  nl_BE.po  nl_NL.po  pl.po  pt.po  (+14 more)
mail_quoted_reply/i18n/: it.po
mail_show_follower/: README.rst  __manifest__.py
mail_show_follower/data/: config_parameter_data.xml
mail_show_follower/i18n/: es.po  fr.po  it.po  (+2 more)
mail_thread_create_nolog/: README.rst
setup/_metapackage/: pyproject.toml
(+15 files in other folders)
